fix(wanwu): tool avatar
