# docs/callback/swagger.json
@@ -2560,10 +2560,6 @@
                 "schema": {
                     "description": "schema",
                     "type": "string"
-                },
-                "toolSquareId": {
-                    "description": "广场mcpId(非空表示来源于广场)",
-                    "type": "string"
                 }
             }
         },
